# Desafio1

./: CMakeLists.txt  Informe.docx  InformeResponsabilidades (1).docx  TetrisC.pro  juego.cpp  juego.h  main.cpp  main.h  piezas.cpp  piezas.h  tablero.cpp  tablero.h
